--- a/keras-to-hls/keras-config.yml
+++ b/keras-to-hls/keras-config.yml
@@ -6,6 +6,7 @@ TruthLabels: example-keras-model-files/KERAS_3layer_truth_labels.dat
 OutputDir: my-hls-test
 ProjectName: myproject
 XilinxPart: xcvu9p-fsgd2104-2-i
+ClockPeriod: 5
 
 IOType: io_parallel # options: io_serial/io_parallel
 HLSConfig:
